configs/k8s/tws/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tws
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tws
  ports:
    - name: api
      port: 7497
      targetPort: api
    - name: rdp
      port: 3389
      targetPort: rdp
